# Yin

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yaml  main.yml
libs/: CMakeLists.txt
test/: CMakeLists.txt  ttCofactor.c  ttGetDistance.c  ttInitEleVar.c  ttIsop.c  ttReadTT.c  ttSim.c  ttUnate.c  ttWeight.c
tt/: CMakeLists.txt  isop.c  simulation.c  simulation.h  tt.c  tt.h  unate.c  unate.h
